# ippusbxd

./: .gitignore  .travis.yml  CMakeLists.txt  behaviour  makefile  readme.md
doc/: behaviour  ippusbxd.1  ippusbxd.8  ippusbxd_presentation.odp  references.md
src/: CMakeLists.txt  FindAVAHICLIENT.cmake  FindAVAHICOMMON.cmake  FindLIBUSB.cmake  bonjour.c  bonjour.h  dnssd.c  dnssd.h  http.c  http.h  ippusbd.c  ippusbxd.c  logging.c  logging.h  options.c  options.h  tcp.c  tcp.h  uds.c  uds.h  usb.c  usb.h
src/core/: main.c
src/http/: http.c  http.h
src/usb/: CMakeLists.txt  usb.c  usb.h
systemd-udev/: 55-ippusbxd.rules
